Name:                   pinpon
Version:                0.0.0.0
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Homepage:               https://github.com/dhess/pinpon/
Bug-Reports:            https://github.com/dhess/pinpon/issues/
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2016, Drew Hess
Tested-With:            GHC == 8.0.1
Category:               Network
Synopsis:               A gateway for various cloud notification services
Description:
  @pinpon@ is a gateway for various cloud notification services, such
  as the Amazon AWS SNS service.
  .
  Think of @pinpon@ as a hub for dispatching notifications originating
  from multiple notification sources. Clients of the @pinpon@ service
  create topics and send notifications via the REST-ish @pinpon@
  service, and the @pinpon@ server takes care of the per-service
  details and communicating with the upstream cloud services.
  .
  Advantages of this approach, compared to programming directly to the
  individual notification services' interfaces, are:
  .
  * A common API for all supported notification services.
  .
  * The secret credentials required to communicate with each cloud
    notification service can be kept in a central location (namely,
    the @pinpon@ server), rather than being distributed to each
    notification source host, therefore reducing the attack surface.
  .
  * Hosts which send notifications via the @pinpon@ gateway can be
    firewalled from the public Internet. This is especially useful in
    IoT applications.
  .
  Currently-supported notification services:
  .
  * Amazon AWS SNS

Extra-Doc-Files:        README.md
Extra-Source-Files:     changelog.md

-- Build doctests
Flag test-doctests
  Default: True
  Manual: True

-- Build hlint test
Flag test-hlint
  Default: True
  Manual: True

-- Build the pinpon executable
Flag pinpon-executable
  Default: True
  Manual: True

-- Build the pinpon-ring executable
Flag pinpon-ring-executable
  Default: True
  Manual: True

-- Build the pinpon-gpio executable
Flag pinpon-gpio-executable
  Default: True
  Manual: True

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
  Else
    -- provide/emulate `Control.Monad.Fail` and `Data.Semigroups` API for pre-GHC8
    Build-Depends:      fail == 4.9.*
                      , semigroups == 0.18.*
  Exposed-Modules:      Network.PinPon.Client
                      , Network.PinPon.API
                      , Network.PinPon.API.Topic
                      , Network.PinPon.AWS
                      , Network.PinPon.Config
                      , Network.PinPon.Notification
                      , Network.PinPon.SwaggerAPI
                      , Network.PinPon.Util
                      , Network.PinPon.WireTypes.APNS
                      , Network.PinPon.WireTypes.SNS
  Other-Extensions:     Safe
                      , Trustworthy
  Build-Depends:        base           >= 4 && < 5
                      , aeson
                      , aeson-pretty
                      , amazonka       == 1.4.3.*
                      , amazonka-core  == 1.4.3.*
                      , amazonka-sns   == 1.4.3.*
                      , bytestring     == 0.10.*
                      , containers
                      , exceptions
                      , http-client    == 0.4.*
                      , http-types     == 0.9.*
                      , lens
                      , lucid          == 2.9.*
                      , mellon-core    == 0.7.*
                      , mtl
                      , resourcet      >= 1.1
                      , servant        >= 0.7.1 && < 0.10
                      , servant-client >= 0.7.1 && < 0.10
                      , servant-docs   >= 0.7.1 && < 0.10
                      , servant-lucid  >= 0.7.1 && < 0.10
                      , servant-server >= 0.7.1 && < 0.10
                      , servant-swagger
                      , servant-swagger-ui
                      , swagger2
                      , text           == 1.2.*
                      , time           >= 1.5   && < 2
                      , transformers   >= 0.4.2 && < 0.6
                      , transformers-base
                      , wai            == 3.2.*
                      , warp           == 3.2.*


Executable pinpon
  Main-Is:              Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       pinpon
  GHC-Options:          -Wall -threaded -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
  Other-Extensions:     OverloadedStrings
  If !flag(pinpon-executable)
    Buildable:         False
  Else
    Build-Depends:      base
                      , amazonka
                      , amazonka-sns
                      , containers
                      , exceptions           >= 0.8.0  && < 1
                      , lens
                      , mtl
                      , pinpon
                      , network              == 2.6.*
                      , optparse-applicative >= 0.11.0 && < 0.13
                      , optparse-text
                      , text
                      , transformers
                      , warp

Executable pinpon-ring
  Main-Is:              Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       pinpon-ring
  GHC-Options:          -Wall -threaded -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
  Other-Extensions:     OverloadedStrings
  If !flag(pinpon-ring-executable)
    Buildable:         False
  Else
    Build-Depends:      base
                      , bytestring
                      , exceptions
                      , http-client
                      , http-client-tls
                      , http-types
                      , lens
                      , network              == 2.6.*
                      , optparse-applicative >= 0.11.0 && < 0.13
                      , optparse-text
                      , pinpon
                      , servant-client
                      , text
                      , transformers
                      , warp

Executable pinpon-gpio
  Main-Is:              Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       pinpon-gpio
  GHC-Options:          -Wall -threaded -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
  Other-Extensions:     OverloadedStrings
  If !flag(pinpon-ring-executable)
    Buildable:         False
  Else
    Build-Depends:      base
                      , bytestring
                      , exceptions
                      , hpio
                      , http-client
                      , http-client-tls
                      , http-types
                      , lens
                      , mtl
                      , network              == 2.6.*
                      , optparse-applicative >= 0.11.0 && < 0.13
                      , optparse-text
                      , pinpon
                      , servant-client
                      , text
                      , time
                      , transformers
                      , warp

Test-Suite hlint
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -w -threaded -rtsopts -with-rtsopts=-N
  Main-Is:              hlint.hs
  If !flag(test-hlint)
    Buildable: False
  Else
    Build-Depends:      base
                      , hlint

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall -threaded
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
  Main-Is:              doctest.hs
  If !flag(test-doctests)
    Buildable: False
  Else
    Build-Depends:      base
                      , doctest >= 0.10.1 && < 1

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -w -threaded -rtsopts -with-rtsopts=-N
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , aeson
                      , aeson-pretty
                      , amazonka
                      , amazonka-core
                      , amazonka-sns
                      , bytestring
                      , containers
                      , exceptions
                      , hspec
                      , http-client
                      , http-types
                      , lens
                      , lucid
                      , mellon-core
                      , mtl
                      , QuickCheck
                      , quickcheck-instances
                      , resourcet
                      , servant
                      , servant-client
                      , servant-docs
                      , servant-lucid
                      , servant-server
                      , servant-swagger
                      , servant-swagger-ui
                      , swagger2
                      , text
                      , time
                      , transformers
                      , transformers-base
                      , wai
                      , warp
  Other-Modules:        Network.PinPon.Client
                      , Network.PinPon.API
                      , Network.PinPon.API.Topic
                      , Network.PinPon.AWS
                      , Network.PinPon.Config
                      , Network.PinPon.Notification
                      , Network.PinPon.SwaggerAPI
                      , Network.PinPon.Util
                      , Network.PinPon.WireTypes.APNS
                      , Network.PinPon.WireTypes.SNS
                      , Spec
                      , Network.PinPon.SwaggerAPISpec

Source-Repository head
  Type:                 git
  Location:             git://github.com/dhess/pinpon.git

Source-Repository this
  Type:                 git
  Location:             git://github.com/dhess/pinpon.git
  -- Tag:               v0.0.0.0
